# Text-Based-Game

./: .gitignore  .gitmodules  CMakeLists.txt  Notes.md  Standards.md  TextBasedGame  tbg.cpp
TextBasedGame/: CMakeLists.txt  TextBasedGame.dev  TextBasedGame.layout  conanfile.txt  main.cpp  tbg.cpp  tbg.h
TextBasedGame/achievements/: achievements.cpp
TextBasedGame/assets/: OPERATION_SENTINEL_SHIELD.txt
TextBasedGame/inventory/: inventory.cpp
TextBasedGame/item/: item.h
TextBasedGame/movement/: movement.cpp
TextBasedGame/player/: player.cpp
TextBasedGame/soloud/contrib/: CMakeLists.txt  Configure.cmake  src.cmake
TextBasedGame/src/: CMakeLists.txt  achievement_collection.cpp  engine.h  main.cpp  prompt.cpp  prompt.h  utils.cpp  utils.h
TextBasedGame/src/achievements/: achievement.cpp  achievement.h  achievement_collection.cpp  achievement_collection.h  achievements.cpp  achievements.h
TextBasedGame/src/command/: command.cpp  command.h  terminal_command.cpp  terminal_command.h
TextBasedGame/src/day/: day.cpp  day.h  day1.cpp  day1.xml  day2.cpp  demo.cpp  demo.md  demo_descriptions.md
TextBasedGame/src/interactions/: interactions.cpp
TextBasedGame/src/inventory/: inventory.cpp  inventory.h
TextBasedGame/src/item/: item.cpp  item.h  note.cpp  terminal.cpp
TextBasedGame/src/items/: Bed.cpp  Board.cpp  Door.cpp  File.cpp  Note.cpp  Safe.cpp  Terminal.cpp  inventory.cpp  items.h
TextBasedGame/src/map/: map.cpp  map.h  node.cpp  node.h  node_setup.cpp  node_setup.h
TextBasedGame/src/mastermind/: CMakeLists.txt
TextBasedGame/src/mastermind/game/: checks.cpp  checks.h  game.cpp  game.h
TextBasedGame/src/mastermind/ui/: controls.cpp  controls.h
TextBasedGame/src/menu/: menu.cpp  menu.h  menu_utils.h  menu_utils_unix.cpp  menu_utils_win.cpp  menu_win.cpp  menu_win.h
TextBasedGame/src/mission/: Objective.cpp  Objective.h  mission.cpp  mission.h
TextBasedGame/src/node/: node.cpp  node.h
TextBasedGame/src/player/: inventory.cpp  inventory.h  movement.cpp  movement.h  player.cpp  player.h
TextBasedGame/src/progress/: progress.cpp  progress.h
TextBasedGame/src/room/: node.cpp  node.h  room.cpp  room.h
TextBasedGame/src/sound/: sound.cpp  sound.h
TextBasedGame/src/terminal/: prompt.cpp  prompt.h  terminal.cpp  terminal.h
TextBasedGame/src/text/: text.cpp  text.h
TextBasedGame/src/utils/: game_utils.cpp  game_utils.h  prompt.cpp  prompt.h
docs/: Notes.md  README.md  Standards.md
include/: achievement_collection.h  command.h  day.h  interactions.h  items.h  map.h  menu.h  node_setup.h  terminal_command.h
src/: main.cpp
src/achievements/: achievement_collection.cpp
src/command/: command.cpp  terminal_command.cpp
src/day/: day1.cpp  day2.cpp  demo.md  demo_descriptions.md
src/interactions/: interactions.cpp
src/items/: Bed.cpp  Board.cpp  Door.cpp  File.cpp  Note.cpp  Safe.cpp  Terminal.cpp  inventory.cpp
src/map/: map.cpp  node_setup.cpp
src/menu/: menu.cpp
vault/: vault.txt
